_sass/includes/_wizard.sass
@import 'variables'

.wizard-branding
	display: block
	width: 80%
	max-width: 960px
	margin: 0 auto
	+breakpoint($mobile)
		text-align: center
		margin-bottom: 10px 

	.logo
		margin-left: -40px
		float: left
		+breakpoint($mobile)
			margin: 0 auto
			float: none

.wizard
	display: block
	width: 80%
	max-width: 960px
	background-color: rgba(245,246,247,1)
	border-bottom: 3px solid #59697D
	padding: $padding-m $padding-l $padding-m $padding-l
	+breakpoint($mobile)
		width: 80%
		padding: $padding-s $padding-m $padding-s $padding-m
		margin-bottom: 20px

	h1
		padding: 20px 0
		+breakpoint($mobile)
			padding: 10px 0 0 0

	.wizard-main
		height: 500px
		.mobile-hide
			+breakpoint($mobile)
				display: none !important
		.steps
			box-sizing: border-box
			width: 20%
			float: left
			height: 100%
			+breakpoint($mobile)
				width: 100%
				height: 40px
			ul
				list-style-type: none
				margin-top: 15px
				padding-right: 10px
				+breakpoint($mobile)
					margin-top: 0
				.icon
					position: relative
					top: -2px
					color: #355460
					+breakpoint($mobile)
						display: none
					+breakpoint(1080px)
						display: none

				li 
					display: block
					font-size: 17px
					font-family: $DattoDIN
					color: #1fb6ff
					text-decoration: none
					padding: 18px 0
					+breakpoint($mobile)
						padding: 5px 0
					.disabled
						color: #81949B
						cursor: not-allowed
					.active
						font-weight: bold
						color: #355460
						cursor: not-allowed
					&:first-child
						padding-top: 13px
						+breakpoint($mobile)
							padding: 5px 0
					.mobile-step
						display: none
						+breakpoint($mobile)
							display: inline-block

		.step-content
			padding: $padding-m $padding-m $padding-m $padding-l
			box-sizing: border-box
			width: 80%
			float: left
			height: 100%
			background-color: #fff
			border: 1px solid #D9DFE1
			border-radius: 4px
			position: relative
			overflow-y: scroll
			overflow-x: hidden
			position: relative
			+breakpoint($mobile)
				width: 100%
				padding: $padding-m
			
			.network-list
				box-sizing: border-box
				height: 450px
				padding-top: 15px
				padding-bottom: 15px
				z-index: 1
				position: relative

				.compact-l
					padding: 0 0 0 6px
				.compact-r
					padding: 0 6px 0 0
				.no-right-padding
					padding-right: 0

			.network-connection
				padding: 10px
				box-sizing: border-box
				border: 1px solid #CDD4D7
				border-radius: 4px
				margin-bottom: 15px
				z-index: 4
				position: relative
				
				.network-status
					vertical-align: top
				.eth-port
					position: absolute
					top: 29px
					left: 53px
					font-size: 20px
					font-family: $DattoDIN
					font-weight: bold
					&.connected
						color: #23A1D6
					&.disconnected
						color: $midnight-40
				.status-tag
					font-family: $secondary-font
					font-size: 16px
					line-height: 16px
					font-weight: bold
					text-transform: capitalize
					border-radius: 4px
					&.connected
						color: #3CB846
					&.disconnected
						color: $midnight-30

				.ethernet-svg
					&.connected
						.status_led
							fill: green
						.network_tab
							fill: green
					&.disconnected
						.status_led
							fill: $midnight-30
						.tab
							fill: $midnight-30
						.port 
							fill: $midnight-30
					&.error
						.status_led
							fill: red
						.tab
							fill: red
						.port 
							fill: red

			ul 
				list-style-type: none
				border: 1px solid #E5E9EB
				border-radius: 4px 
				li 
					width: 100%
					height: 50px
					line-height: 50px
					display: block
					border-bottom: 1px solid #E5E9EB
					&:last-child
						border-bottom: 0
					input
						position: relative
						top: 15px
					.radio-value
						font-family: $DattoDIN
						font-weight: bold
						font-size: 16px
						color: $midnight-80
					.radio-description
						color: $midnight-40
						font-style: italic
					.radio-tag
						position: relative
						top: 13px
						font-size: 12px
						font-weight: bold
						line-height: 13px
						padding: 5px
						margin-left: 10px
						display: inline-block
						float: left
						font-family: DattoDIN
						text-transform: uppercase
						background-color: #7AD02F
						color: #fff
						border-radius: 4px

	.action-bar
		width: 100%
		height: 70px
		.icon
			color: #fff
			top: 4px
			position: relative

		.tertiary
			float: right
			+breakpoint($mobile)
				float: left
	

